# autocmd

./: .env  .gitignore  README.md  autocmd-wrapper.zsh  autocmd.py  dev-setup.sh  pyproject.toml
.github/workflows/: publish.yml
src/autocmd_cli/: __init__.py  llm_providers.py
tests/: test_autocmd.py
